Set up the new data structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(FD)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(FD main.cpp solver.h solver.cpp)
+add_executable(FD main.cpp solver.h solver.cpp base.h base.cpp test_base.cpp)
